A second glitch with the filter appearing on smaller screens when page loads is gone. It was fixed by removing keyframe.

--- a/components/UI/Filter/Filter.scss
+++ b/components/UI/Filter/Filter.scss
@@ -31,11 +31,11 @@
   }
 
   &__content__filter {
-    animation-name: moveInLeft;
-    animation-duration: .6s;
+    //animation-name: moveInLeft;
+    //animation-duration: .6s;
     //animation-delay: 0.2s;
     /*animation-iteration-count: 2;*/
-    animation-timing-function: ease-out;
+    //animation-timing-function: ease-out;
 
     position: relative;
     transition: all .7s;
